--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,8 +4,15 @@
 
 html,body {
     height: 100%;
+    margin:0;
     top: 0;
     left: 0;
     bottom: 0;
     right: 0;
+    width:100%;
+    position: relative;
 }
+
+/* #root{
+    height: 100%;
+} */
